--- a/index.html
+++ b/index.html
@@ -1,27 +1,19 @@
 <!DOCTYPE html>
 <html>
-
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width">
-  <title>repl.it</title>
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
-  <link href="style.css" rel="stylesheet" type="text/css" />
-</head>
-
-<body class="container">
-  <h1 class="text-center">Atividade de Javascript - Lâmpada</h1>
-  <div class="row">
-    <div class="col-6 border">
-      <p class="text-center">Clique na lâmpada para acendê-la e apagá-la</p>
-      <img class="img-fluid" src="lampada.jpg" id="lampada-01" />
-    </div>
-    <div class="col-6 border">
-      <p class="text-center">Passe o mouse em cima da lâmpada para acendê-la e apagá-la</p>
-      <img class="img-fluid" src="lampada.jpg" id="lampada-02" />
-    </div>
-  </div>
-  <script src="script.js"></script>
-</body>
-
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width">
+    <title>repl.it</title>
+    <link href="style.css" rel="stylesheet" type="text/css" />
+  </head>
+  <body>
+    <div style="text-align:center;width:480px;">
+  <button onmousedown="moveup()" onmouseup="clearmove()" ontouchstart="moveup()">UP</button><br><br>
+  <button onmousedown="moveleft()" onmouseup="clearmove()" ontouchstart="moveleft()">LEFT</button>
+  <button onmousedown="moveright()" onmouseup="clearmove()" ontouchstart="moveright()">RIGHT</button><br><br>
+  <button onmousedown="movedown()" onmouseup="clearmove()" ontouchstart="movedown()">DOWN</button>
+</div>
+<p>Turn up the volume. Do you hear a "dunk" when the red square hits an obstacle?</p>
+    <script src="script.js"></script>
+  </body>
 </html>
